--- a/oct01pp/src/components/copies/Copies.scss
+++ b/oct01pp/src/components/copies/Copies.scss
@@ -15,7 +15,7 @@
 /*mobile styles are applied to every other screen size until you override it*/
 @media only screen and (min-width: 320px) {
   /*main container */
-  section {
+  section_a {
     background-color: #000;
     min-height: 100vh;
     width: 100%;
@@ -23,7 +23,7 @@
     @include flexbox();
     @include flex-direction(column);
     @include align-items(left);
-    padding: 0 40px;
+
 
     .info {
       color: #AABB94;
@@ -35,21 +35,22 @@
 
   /*header for all secondary pages.
   */
-  section .secheader {
+  section_a .secheader {
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
     width: 100%;
     min-height: 10vh;
     border-bottom: 1px solid #FFF;
+    padding-left: 40px;
 
     div {
       display: flex;
       align-items: baseline;
     }
 
-    section .secheader h2 {
-      margin: 0 3px 0 40px;
+    section_a .secheader h2 {
+      margin: 0 3px 0 7px;
       color: #AABB94;
       font-family: "Andale Mono", serif;
       font-size: 1.5em;
@@ -60,11 +61,12 @@
       color: #0E6F8D;
       font-family: "Adobe Garamond Pro", serif;
       font-size: 2em;
-      text-decoration: none
+      text-decoration: none;
+      padding-left: 5px;
     }
   }
 
-  section main {
+  section_a main {
     @include flexbox();
     @include justify-content(center);
     width: 100vw;
